testament/tests/shouldfail/terrormsg.nim
discard """
errormsg: "wrong error message"
line: 8
column: 6
target: c
"""

# test should fail because the line directive is wrong
echo undeclared
